Minor Ui update

--- a/barcode-scanner/src/main/res/values/attrs.xml
+++ b/barcode-scanner/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
         <attr name="square_width" format="integer" />
         <attr name="square_height" format="integer" />
         <attr name="line_color" format="color" />
+        <attr name="frame_color" format="color" />
         <attr name="point_color" format="color" />
         <attr name="line_width" format="integer" />
         <attr name="line_speed" format="integer" />
