--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -17,8 +17,9 @@
     <com.barcode.ScannerOverlay
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#44000000"
+        android:background="#6e000000"
         app:line_color="#7323DC"
+        app:frame_color="#5ddcef"
         app:line_speed="6"
         app:line_width="4"
         app:square_height="200"
