--- a/example/src/main/res/layout/activity_barcode_fragment_test.xml
+++ b/example/src/main/res/layout/activity_barcode_fragment_test.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context="info.androidhive.barcodereader.BarcodeFragmentTestActivity">
+    tools:context="info.androidhive.barcodereader.BarcodeActivity">
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
